feat: add more log info to local worker

--- a/celery_service.conf
+++ b/celery_service.conf
@@ -15,6 +15,8 @@ autostart=true
 autorestart=true
 stderr_logfile=/path/to/your/logs/celery_worker.err.log
 stdout_logfile=/path/to/your/logs/celery_worker.out.log
+stopwaitsecs=300
+stopsignal=QUIT
 
 [group:celery_flask]
 programs=flask_api,celery_worker
