refactor: update task result retrieval in API and enhance Celery worker configuration; add caching mechanism for task results

--- a/celery_service.conf
+++ b/celery_service.conf
@@ -1,23 +1,44 @@
-[program:flask_api]
-command=/path/to/your/venv/bin/python /path/to/your/api.py
-directory=/path/to/your/project
-user=your_username
+; ============================================
+; Supervisor 配置文件
+; 安装: sudo apt install supervisor
+; 部署: sudo cp celery_service.conf /etc/supervisor/conf.d/kolors.conf
+; 启动: sudo supervisorctl reread && sudo supervisorctl update
+; ============================================
+
+[program:kolors_api]
+command=/opt/kolors/venv/bin/python /opt/kolors/api.py
+directory=/opt/kolors
+user=kolors
+environment=HOME="/home/kolors",PATH="/opt/kolors/venv/bin:%(ENV_PATH)s"
 autostart=true
 autorestart=true
-stderr_logfile=/path/to/your/logs/flask_api.err.log
-stdout_logfile=/path/to/your/logs/flask_api.out.log
+startsecs=5
+startretries=3
+stderr_logfile=/var/log/kolors/api.err.log
+stdout_logfile=/var/log/kolors/api.out.log
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups=10
 
-[program:celery_worker]
-command=/path/to/your/venv/bin/celery -A tasks worker --loglevel=info
-directory=/path/to/your/project
-user=your_username
+[program:kolors_worker]
+; 关键参数: --concurrency=1 确保单 GPU 单任务
+command=/opt/kolors/venv/bin/celery -A local_worker worker --loglevel=info --concurrency=1 --prefetch-multiplier=1
+directory=/opt/kolors
+user=kolors
+environment=HOME="/home/kolors",PATH="/opt/kolors/venv/bin:%(ENV_PATH)s"
 autostart=true
 autorestart=true
-stderr_logfile=/path/to/your/logs/celery_worker.err.log
-stdout_logfile=/path/to/your/logs/celery_worker.out.log
-stopwaitsecs=300
-stopsignal=QUIT
+startsecs=10
+startretries=3
+stderr_logfile=/var/log/kolors/worker.err.log
+stdout_logfile=/var/log/kolors/worker.out.log
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups=10
+; 优雅关闭: 等待当前任务完成
+stopwaitsecs=330
+stopsignal=TERM
+stopasgroup=true
+killasgroup=true
 
-[group:celery_flask]
-programs=flask_api,celery_worker
+[group:kolors]
+programs=kolors_api,kolors_worker
 priority=999
